tests/samples/negative/functions/lambda_match_guard_capture_unsupported.ax
module lambda_match_guard_capture_unsupported;

fn main() -> i32 {
    let enabled: bool = true;
    let choose: fn(bool) -> i32 = fn(value: bool) -> i32 {
        return match value {
            true if enabled => 1,
            _ => 0,
        };
    };
    return choose(false);
}
